changed data path

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('../data/train.csv')\n",
+    "data = pd.read_csv('../data/raw/train.csv')\n",
     "data.head()"
    ]
   },
